--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,7 @@
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>your.group.id</groupId>
+  <artifactId>your-artifact-id</artifactId>
+  <version>1.0-SNAPSHOT</version>
+</project>
 
